[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyls"
version = "0.1.0"
description = "A Python ls utility"
authors = [
    { name="Soumendu Pal", email= "skp@gmail.com" }
]
dependencies = []

[project.scripts]
pyls = "pyls:main"

[project.optional-dependencies]
testing = ["pytest"]